--- a/charts/devtron/values.yaml
+++ b/charts/devtron/values.yaml
@@ -7,7 +7,7 @@ installer:
   source: "github" # Available options are github and gitee
 #  mode: "dashboard" # Available options are dashboard, full and hyperion (deprecated) NOT USING THIS
   modules: [] # Available options are cicd
-  production_overrides: "" # Set true if you want to use this Devtron stack in Production (This will require more resources)
+  production_overrides: "testing" # Set true if you want to use this Devtron stack in Production (This will require more resources)
 
 # Change the below values for full mode only checking synching
 
